--- a/index.html
+++ b/index.html
@@ -1,11 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Pixel Art</title>
-  <script src="script.js"></script>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8">
+    <title>Pixel Art</title>
+    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <h1>Brad's Pixel Art</h1>
+    <div class="container">
+      <main class="main-box">
 
-</body>
+
+        <section class="grid-box">
+          <!-- <div class="box"></div>
+          <div class="box"></div>
+          <div class="box"></div>
+          <div class="box"></div>
+          <div class="box"></div>
+          <div class="box"></div>
+          <div class="box"></div>
+          <div class="box"></div>
+          <div class="box"></div> -->
+
+        </section>
+
+        <section class ="main-bottom">
+          <div>
+            <section class="color-swatches-container">
+              <div class="color-swatches red"></div>
+              <div class="color-swatches orange"></div>
+              <div class="color-swatches yellow"></div>
+              <div class="color-swatches green"></div>
+              <div class="color-swatches blue"></div>
+              <div class="color-swatches purple"></div>
+              <div class="color-swatches pink"></div>
+              <div class="color-swatches black"></div>
+            </section>
+          </div>
+        </section>
+      </main>
+    </div>
+  </body>
 </html>
