brush indicator added

--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
 
         <section class="row">
           <div class="inlineBox">
-            <div class="colorIndicator">
-            </div>
+            <!-- <h4>Brush Color</h4> -->
+            <div class="colorIndicator"></div>
           </div>
         </section>
-        
+
       </main>
     </div>
   </body>
