clear function working

--- a/index.html
+++ b/index.html
@@ -18,37 +18,42 @@
             </div>
           </div>
         </section>
-  <br>
-        <h3 class="selectorText">Select A Color</h3>
+
+        <h3 class="selectorText">Select A Color and Draw</h3>
         <section class ="main-bottom">
           <div class="row">
             <div class="inlineBox">
               <div class="colorSelector">
                 <div class="pickAColor" id="darkRed"></div>
                 <div class="pickAColor" id="red"></div>
-                <div class="pickAColor" id="pink"></div>
-                <div class="pickAColor" id="orange"></div>
-                <div class="pickAColor" id="orangeYellow"></div>
+                <div class="pickAColor" id="hotPink"></div>
+                <div class="pickAColor" id="orangeRed"></div>
+                <div class="pickAColor" id="gold"></div>
                 <div class="pickAColor" id="yellow"></div>
-                <div class="pickAColor" id="lightGreen"></div>
-                <div class="pickAColor" id="darkGreen"></div>
-                <div class="pickAColor" id="lightBlue"></div>
-                <div class="pickAColor" id="lightPurple"></div>
-                <div class="pickAColor" id="blue"></div>
-                <div class="pickAColor" id="purple"></div>
-                <div class="pickAColor" id="brown"></div>
-                <div class="pickAColor" id="gray"></div>
+                <div class="pickAColor" id="seaGreen"></div>
+                <div class="pickAColor" id="green"></div>
+                <div class="pickAColor" id="deepSkyBlue"></div>
+                <div class="pickAColor" id="mediumBlue"></div>
+                <div class="pickAColor" id="darkOrchid"></div>
+                <div class="pickAColor" id="blueViolet"></div>
+                <div class="pickAColor" id="peru"></div>
+                <div class="pickAColor" id="saddleBrown"></div>
+                <div class="pickAColor" id="grey"></div>
                 <div class="pickAColor" id="black"></div>
                 <div class="pickAColor" id="white"></div>
+                <!-- <div class="pickAColor" id="antiqueWhite"></div> -->
               </div>
             </div>
+
           </div><!--end colorSelector -->
+
         </section>
 
         <section class="row">
-          <div class="inlineBox">
-            <!-- <h4>Brush Color</h4> -->
+          <div class="bottom">
+            <h4>Brush Color</h4>
             <div class="colorIndicator"></div>
+            <button type="button" class="clearGrid">Clear Entire Grid</button>
           </div>
         </section>
 
